--- a/react/src/demo/demo.scss
+++ b/react/src/demo/demo.scss
@@ -75,3 +75,18 @@ h1 {
 .h-full {
   height: 100%;
 }
+
+
+$columns: 144;
+@function fixed($float) {
+  @return round($float * 1000) / 1000; // total 2+3 digits being %
+}
+.gs-#{$columns} > .grid-stack-item {
+
+  width: fixed(100% / $columns);
+
+  @for $i from 1 through $columns - 1 {
+    &[gs-x='#{$i}'] { left: fixed((100% / $columns) * $i); }
+    &[gs-w='#{$i+1}'] { width: fixed((100% / $columns) * ($i+1)); }
+  }
+}
