--- a/react/src/demo/demo.scss
+++ b/react/src/demo/demo.scss
@@ -76,21 +76,24 @@ h1 {
   height: 100%;
 }
 
-$columns-max: 144;
+$columns-max: 288;
 
 @function fixed($float) {
   @return round($float * 1000) / 1000;
 }
 
 @for $columns from 1 through $columns-max {
-
   .gs-#{$columns} > .grid-stack-item {
-
-    width: fixed(100% / $columns);
+    width: calc(100% / #{$columns});
   
     @for $i from 1 through $columns - 1 {
-      &[gs-x='#{$i}'] { left: fixed((100% / $columns) * $i); }
-      &[gs-w='#{$i+1}'] { width: fixed((100% / $columns) * ($i+1)); }
+      &[gs-x='#{$i}'] { left: calc((100% / #{$columns}) * #{$i}); }
+      &[gs-w='#{$i+1}'] { width: calc((100% / #{$columns}) * #{$i + 1}); }
+    }
+
+    @for $i from $columns through $columns-max + 1 {
+      &[gs-x='#{$i}'] { left: 0 }
+      &[gs-w='#{$i+1}'] { width: 100%; }
     }
   }
 }
